# Agent2Telegram

./: AGENTS.md  Dockerfile  README.md  SECURITY.md  install.sh  pyproject.toml
agent2telegram/: __init__.py  __main__.py  attach.py  bridge.py  config.py  session.py  stop_hook.py  telegram.py  wizard.py
agent2telegram/adapters/: __init__.py
tests/: test_bridge.py  test_marker.py
